--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,18 +15,19 @@
 @import "../node_modules/bootstrap-scss/utilities/api";
 
 :root {
-    --convrtr-bg-color: #11806a;
+    --convrtr-bg-color: rgb(17, 128, 106);
     --bs-bg-success: 17, 128, 106;
     --convrtr-bg-color-rgb: 17, 128, 106;
     --convrtr-bg-color-10: #0f735f;
     --convrtr-bg-color-20: #0e6655;
     --convrtr-bg-color-25: #11806a40;
     --convrtr-bg-color-25-rgb: rgba(17, 128, 106, 0.25);
-    --convrtr-bg-color-50-rgb: rgba(17, 128, 106, 0.50);
+    --convrtr-bg-color-50-rgb: rgba(17, 128, 106, 0.5);
     --convrtr-bg-color-75-rgb: rgba(17, 128, 106, 0.75);
     --convrtr-bg-color-50: #88c0b5;
+    --convrtr-bg-color-50-rgba: 136, 192, 181;
     --convrtr-bg-color-75: #4da08f;
-    --convrtr-bg-color-75-rbg: 77, 160, 143;
+    --convrtr-bg-color-75rbg: 77, 160, 143;
     --convrtr-base-color: #212529;
     --convrtr-textarea: rgba(0,0,0,.03);
     --convrtr-switch-thumb: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2388c0b5'/%3e%3c/svg%3e");
@@ -50,7 +51,7 @@ body {
 }
 .text-convrtr {
     --bs-text-opacity: 1;
-    color: rgba(var(--convrtr-bg-color-50), var(--bs-text-opacity)) !important;
+    color: rgba(var(--bs-bg-success), var(--bs-text-opacity)) !important;
 }
 @include color-mode(dark) {
     .text-convrtr {
