Surfacing uppercase/lowercase only options in Text tools

--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -37,6 +37,8 @@
                                             <option value="stripspecialchars">Strip special characters</option>
                                             <option value="removenumbers">Remove all numbers</option>
                                             <option value="removeletters">Remove all letters</option>
+                                            <option value="uppercaseonly">Uppercase only</option>
+                                            <option value="lowercaseonly">Lowercase only</option>
                                             <option value="specialcharsonly">Special characters only</option>
                                             <option value="alphabet">Letters to alphabet number</option>
                                             <option value="urlencode">URL Encode</option>
