Updated delimiter partial to pass in custom ID
As we can't use front matter i included files, went the route of setting a variable to pass through an ID that can be used in JS land

--- a/_includes/partials/hex/reversehex.liquid
+++ b/_includes/partials/hex/reversehex.liquid
@@ -1,3 +1,4 @@
+{% assign hexDelimiter = "reverseHexDelimiter" %}
 <section id="reverseHex" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
