--- a/_includes/components/delimiter.liquid
+++ b/_includes/components/delimiter.liquid
@@ -1,4 +1,4 @@
-<select class="form-select {% if page-id == "home" %}form-select-sm mx-2 ms-auto {%endif %}w-auto hex-delimiter" aria-label="Change Hexadecimal delimiter">
+<select class="form-select {% if page-id == "home" %}form-select-sm mx-2 ms-auto {%endif %}w-auto hex-delimiter" aria-label="Change Hexadecimal delimiter" id="{{ hexDelimiter }}">
     <option value=" " selected="">Space</option>
     <option value="-">Hyphen</option>
     <option value=":">Colon</option>
