--- a/_includes/partials/hex/shift.liquid
+++ b/_includes/partials/hex/shift.liquid
@@ -1,3 +1,4 @@
+{% assign hexDelimiter = "shiftHexDelimiter" %}
 <section id="shift" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
