A hex upon hexes!
Added a new function to correctly check if a string is valid hex (with updated and fixed regex pattern - was missing a ^)
Added "No delimiter" option to the delimiters partial, so it can work on hex strings with no spaces
Updated functions to handle no delimiter, so that strings get correctly split and parsed
Set hexDelimiter value on each convrtr so that the onchange dropdown  functions correctly again
Fixed some incorrect parentheses placement when calling hexToString, which meant delimiter wasn't being picked up
Clean up console logs
Improved error messaging and wording around the use of delimiters

--- a/_includes/components/delimiter.liquid
+++ b/_includes/components/delimiter.liquid
@@ -5,4 +5,5 @@
     <option value=",">Comma</option>
     <option value="\x">Slash x (\x)</option>
     <option value="0x">Zero x (0x)</option>
+    <option value="">No delimiter</option>
 </select>
