--- a/_includes/partials/misc/forerunner.liquid
+++ b/_includes/partials/misc/forerunner.liquid
@@ -13,7 +13,7 @@
             </div>
             <hr>
             <p class="px-2">
-                Convert Forerunner glyphs to text
+                Convert Forerunner glyphs from the video game <a href="https://www.halowaypoint.com/" title="HaloWaypoint.com - the official site for the Halo universe" class="text-convrtr">Halo</a>, these glyphs were primarily used during an <a href="https://www.halopedia.org/Section_3_ARG" title="Halopedia - Section 3 ARG" class="text-convrtr">ARG</a> for Halo 4.
             </p>
             <p class="px-2">
                  There is more information available on the <a href="https://www.halopedia.org/Forerunner_symbols" class="text-convrtr">Forerunner symbols</a> Halopedia page. 
