--- a/_includes/partials/files/headers.liquid
+++ b/_includes/partials/files/headers.liquid
@@ -3,7 +3,7 @@
         <div class="section-heading mb-4">
             <div class="d-flex justify-content-between section-toggle"
                 data-bs-toggle="collapse" href="#headersCollapse" role="button" 
-                aria-expanded="false" aria-controls="headersCollapse">
+                aria-expanded="true" aria-controls="headersCollapse">
                 <h2 class="display-6 w-100 d-flex m-0">
                     File headers
                 </h2>
@@ -19,7 +19,7 @@
                 More information is available on the <a href="https://en.wikipedia.org/wiki/List_of_file_signatures" class="text-convrtr" title="List of file signatures, Wikipedia">File signatures</a> Wikipedia page.
             </p>
         </div>
-        <div id="headersCollapse" class="collapse">
+        <div id="headersCollapse" class="collapse show">
             <div class="card">
                 <span class="card-label visually-hidden">File headers in hexadecimal format</span>
                 <div class="card-body py-3">
