--- a/_includes/partials/home/replace.liquid
+++ b/_includes/partials/home/replace.liquid
@@ -1,9 +1,9 @@
-<section id="replace" class="section">
+<section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
-                data-bs-toggle="collapse" href="#replaceCollapse" role="button" 
-                aria-expanded="false" aria-controls="replaceCollapse">
+                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+                aria-expanded="false" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Replace characters
                 </h2>
@@ -13,41 +13,41 @@
             </a>
             <hr>
             <p class="px-2">
-                Replace characters in a string - allows replace any characters or phrases in a string with any character or phrase. 
+                Replace characters in a string - allows replacing any characters or phrases in a string with any character or phrase. 
                 Supports regex so you can run your own custom advanced replacements
             </p>
         </div>
-        <div id="replaceCollapse" class="collapse">
+        <div id="{{ filename }}Collapse" class="collapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Replace characters</span>
                     <div class="card-body text-center">
-                        <label for="replaceText" class="visually-hidden">Replace characters in a string</label>
-                        <textarea placeholder="Example: TESTING → ST → EA → TEASING" rows="6" id="replaceText" class="form-control replace-text" autocomplete="off"></textarea>
+                        <label for="{{ filename }}Text" class="visually-hidden">Replace characters in a string</label>
+                        <textarea placeholder="Example: TESTING → ST → EA → TEASING" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-2 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-lg-auto me-2 mb-2">
                                     <div class="input-group w-auto mb-2">
-                                        <label class="input-group-text" for="replaceValue">Old<span class="d-none d-md-block">&nbsp;characters</span></label>
-                                        <input type="text" class="form-control" id="replaceValue" autocomplete="off">
+                                        <label class="input-group-text" for="{{ filename }}Value">Old<span class="d-none d-md-block">&nbsp;characters</span></label>
+                                        <input type="text" class="form-control" id="{{ filename }}Value" autocomplete="off">
                                     </div>
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" id="newCharacters" for="replacementValue">New<span class="d-none d-md-block">&nbsp;characters</span></label>
-                                        <input type="text" class="form-control" id="replacementValue" autocomplete="off">
-                                        <button class="btn btn-convrtr" type="button" id="replaceDecode">Replace</button>
+                                        <label class="input-group-text" id="newCharacters" for="{{ filename }}mentValue">New<span class="d-none d-md-block">&nbsp;characters</span></label>
+                                        <input type="text" class="form-control" id="{{ filename }}mentValue" autocomplete="off">
+                                        <button class="btn btn-convrtr" type="button" id="{{ filename }}Decode">Replace</button>
                                     </div>
                                 </div>
                                 <div class="col d-flex flex-fill mb-2">
                                     <div class="me-auto flex-fill">
                                         <div class="form-check form-switch mx-lg-2 d-flex">
-                                            <input class="form-check-input" type="checkbox" role="switch" id="replaceCase" aria-checked="false">
-                                            <label class="form-check-label" for="replaceCase">Case sensitive</label>
+                                            <input class="form-check-input" type="checkbox" role="switch" id="{{ filename }}Case" aria-checked="false">
+                                            <label class="form-check-label" for="{{ filename }}Case">Case sensitive</label>
                                         </div>
                                         <div class="form-check form-switch mx-lg-2 d-flex">
-                                            <input class="form-check-input" type="checkbox" role="switch" id="replaceChain" aria-checked="false">
-                                            <label class="form-check-label" for="replaceChain">Chain <span class="visually-hidden" aria-hidden="true" focusable="true">replace</span> commands</label>
+                                            <input class="form-check-input" type="checkbox" role="switch" id="{{ filename }}Chain" aria-checked="false">
+                                            <label class="form-check-label" for="{{ filename }}Chain">Chain <span class="visually-hidden" aria-hidden="true" focusable="true">{{ filename }}</span> commands</label>
                                         </div>
                                     </div>
                                     {% include "components/select-copy-dl" %}
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div id="replaceResults" class="data-to-copy active"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
                     </div>
                 </div>
             </div>
