--- a/_includes/partials/hex/hexfrequencies.liquid
+++ b/_includes/partials/hex/hexfrequencies.liquid
@@ -1,10 +1,9 @@
-{% assign hexDelimiter = "hexFrequencies" %}
-<section id="hexFreq" class="section">
+<section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
-                data-bs-toggle="collapse" href="#freqCollapse" role="button" 
-                aria-expanded="false" aria-controls="freqCollapse">
+                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+                aria-expanded="false" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Hex frequencies
                 </h2>
@@ -17,22 +16,22 @@
                 For a given string of Hexadecimal, list out the frequencies of various hex combinations. This can be useful when looking at data-driven puzzles, and trying to find recognizable patterns.
             </p>
         </div>
-        <div class="collapse" id="freqCollapse">
+        <div class="collapse" id="{{ filename }}Collapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Hex frequencies</span>
                     <div class="card-body text-center">
-                        <label for="freqText" class="visually-hidden">Hex characters to check</label>
-                        <textarea placeholder="Example: " rows="6" id="freqText" class="form-control word-freqs" autocomplete="off"></textarea>
+                        <label for="{{ filename }}Text" class="visually-hidden">Hex characters to check</label>
+                        <textarea placeholder="Example: " rows="6" id="{{ filename }}Text" class="form-control word-freqs" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" for="{{ hexDelimiter }}Delimiter">Delimiter</label>
+                                        <label class="input-group-text" for="{{ filename }}Delimiter">Delimiter</label>
                                         {% include "components/delimiter" %}
-                                        <button type="button" class="btn btn-md btn-convrtr" id="freqDecode" title="Generate hex frequencies">Generate</button>
+                                        <button type="button" class="btn btn-md btn-convrtr" id="{{ filename }}Decode" title="Generate hex frequencies">Generate</button>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-auto flex-fill">
@@ -44,7 +43,7 @@
                         </div>
                         <hr />
                         <div class="">
-                            <div class="grid g-4 my-1 data-to-copy active" id="freqResults"></div>
+                            <div class="grid g-4 my-1 data-to-copy active" id="{{ filename }}Results"></div>
                         </div>
                     </div>
                 </div>
