--- a/_includes/partials/hex/shifthex.liquid
+++ b/_includes/partials/hex/shifthex.liquid
@@ -1,10 +1,9 @@
-{% assign hexDelimiter = "shiftHex" %}
-<section id="shift" class="section">
+<section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
-                data-bs-toggle="collapse" href="#{{ hexDelimiter }}Collapse" role="button" 
-                aria-expanded="true" aria-controls="{{ hexDelimiter }}Collapse">
+                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+                aria-expanded="true" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Shift hex
                 </h2>
@@ -20,40 +19,40 @@
                 The dropdown allows you to select a delimiter, which is how your hex values are split up and joined together. The default is a space, you can select no delimiter if your hex contains no spaces. Negative numbers are allowed.
             </p>
         </div>
-        <div class="collapse show" id="{{ hexDelimiter }}Collapse">
+        <div class="collapse show" id="{{ filename }}Collapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Shift hex string</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: 55 66 74 75" title="Shift hex string" rows="6" id="shiftText" class="form-control shift-hex" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: 55 66 74 75" title="Shift hex string" rows="6" id="{{ filename }}Text" class="form-control shift-hex" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-2 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto me-2 mb-2">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" id="shiftValueLabel" for="shiftValue"><span class="d-none d-md-block">Shift&nbsp;</span>Value</label>
-                                        <input type="number" class="form-control" id="shiftValue" autocomplete="off">
-                                        <button class="btn btn-convrtr" type="button" id="shiftDecode">Shift</button>
+                                        <label class="input-group-text" id="{{ filename }}ValueLabel" for="{{ filename }}Value"><span class="d-none d-md-block">Shift&nbsp;</span>Value</label>
+                                        <input type="number" class="form-control" id="{{ filename }}Value" autocomplete="off">
+                                        <button class="btn btn-convrtr" type="button" id="{{ filename }}Decode">Shift</button>
                                     </div>
                                 </div>
                                 <div class="col d-flex flex-fill justify-content-start mb-2">
-                                    <label class="visually-hidden" for="{{ hexDelimiter }}Delimiter">Shift Hex Delimiter</label>
+                                    <label class="visually-hidden" for="{{ filename }}Delimiter">Shift Hex Delimiter</label>
                                     {% include "components/delimiter" %}
                                     {% include "components/select-copy-dl" %}
                                 </div>
                             </div>
                         </div>
                         <hr />
-                        <div id="shiftResults" class="d-flex flex-row">
-                            <div class="nav flex-column nav-pills me-3 shift-tabs" id="shiftTabs" role="tablist" aria-orientation="vertical">
+                        <div id="{{ filename }}Results" class="d-flex flex-row">
+                            <div class="nav flex-column nav-pills me-3 shift-tabs" id="{{ filename }}Tabs" role="tablist" aria-orientation="vertical">
                                 <button class="nav-link active" id="text-tab" data-bs-toggle="tab" data-bs-target="#text-tab-pane" type="button" role="tab" aria-controls="text-tab-pane" aria-selected="true">Text</button>
                                 <button class="nav-link" id="binary-tab" data-bs-toggle="tab" data-bs-target="#binary-tab-pane" type="button" role="tab" aria-controls="binary-tab-pane" aria-selected="false" tabindex="-1">Binary</button>
                                 <button class="nav-link" id="hex-tab" data-bs-toggle="tab" data-bs-target="#hex-tab-pane" type="button" role="tab" aria-controls="hex-tab-pane" aria-selected="false" tabindex="-1">Hex</button>
                                 <button class="nav-link" id="base64-tab" data-bs-toggle="tab" data-bs-target="#base64-tab-pane" type="button" role="tab" aria-controls="base64-tab-pane" aria-selected="false" tabindex="-1">Base64</button>
                                 <button class="nav-link" id="decimal-tab" data-bs-toggle="tab" data-bs-target="#decimal-tab-pane" type="button" role="tab" aria-controls="decimal-tab-pane" aria-selected="false" tabindex="-1">Decimal</button>
                               </div>
-                              <div class="tab-content flex-column flex-fill shift-tabs" id="shiftTabs-content">
+                              <div class="tab-content flex-column flex-fill shift-tabs" id="{{ filename }}Tabs-content">
                                 <div class="tab-pane h-100 fade show active data-to-copy" id="text-tab-pane" role="tabpanel" aria-labelledby="text-tab" tabindex="0"></div>
                                 <div class="tab-pane h-100 fade data-to-copy" id="binary-tab-pane" role="tabpanel" aria-labelledby="binary-tab" tabindex="0"></div>
                                 <div class="tab-pane h-100 fade data-to-copy" id="hex-tab-pane" role="tabpanel" aria-labelledby="hex-tab" tabindex="0"></div>
